@@ -73,8 +73,6 @@ go in here.
 
 === VEX/s390x ==========================================================
 
-350290  s390x unsupported instruction fixbra
-
 === VEX general ========================================================
 
 === Syscalls/ioctls ====================================================
