@@ -1,0 +1,36 @@
+fixbr 1.25000	-> 1  [-> nearest even]
+fixbr 1.25000	-> 1  [-> 0]
+fixbr 1.25000	-> 2  [-> +inf]
+fixbr 1.25000	-> 1  [-> -inf]
+fixbr 1.50000	-> 2  [-> nearest even]
+fixbr 1.50000	-> 1  [-> 0]
+fixbr 1.50000	-> 2  [-> +inf]
+fixbr 1.50000	-> 1  [-> -inf]
+fixbr 2.50000	-> 2  [-> nearest even]
+fixbr 2.50000	-> 2  [-> 0]
+fixbr 2.50000	-> 3  [-> +inf]
+fixbr 2.50000	-> 2  [-> -inf]
+fixbr 1.75000	-> 2  [-> nearest even]
+fixbr 1.75000	-> 1  [-> 0]
+fixbr 1.75000	-> 2  [-> +inf]
+fixbr 1.75000	-> 1  [-> -inf]
+fixbr -1.25000	-> -1  [-> nearest even]
+fixbr -1.25000	-> -1  [-> 0]
+fixbr -1.25000	-> -1  [-> +inf]
+fixbr -1.25000	-> -2  [-> -inf]
+fixbr -1.50000	-> -2  [-> nearest even]
+fixbr -1.50000	-> -1  [-> 0]
+fixbr -1.50000	-> -1  [-> +inf]
+fixbr -1.50000	-> -2  [-> -inf]
+fixbr -2.50000	-> -2  [-> nearest even]
+fixbr -2.50000	-> -2  [-> 0]
+fixbr -2.50000	-> -2  [-> +inf]
+fixbr -2.50000	-> -3  [-> -inf]
+fixbr -1.75000	-> -2  [-> nearest even]
+fixbr -1.75000	-> -1  [-> 0]
+fixbr -1.75000	-> -1  [-> +inf]
+fixbr -1.75000	-> -2  [-> -inf]
+fixbr 0.00000	-> 0  [-> nearest even]
+fixbr 0.00000	-> 0  [-> 0]
+fixbr 0.00000	-> 0  [-> +inf]
+fixbr 0.00000	-> 0  [-> -inf]
